# langgraph-events

./: .gitignore  .pdm-python  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  todos.md
.github/workflows/: ci.yml  docs.yml  publish.yml  security.yml
docs/: agui.md  api.md  checkpointer-evolution.md  concepts.md  control-flow.md  event-migrations.md  getting-started.md  index.md  migrating.md  patterns.md  reducers.md  streaming.md
examples/: agui_confirm_dialog.graph.md  agui_confirm_dialog.py  agui_frontend_tools.graph.md  agui_frontend_tools.py  content_pipeline.graph.md  content_pipeline.py  content_pipeline.types.md  conversation.graph.md  conversation.py  ddd_conversation.graph.md  ddd_conversation.py  ddd_expense_approval.graph.md  ddd_expense_approval.py  ddd_order.graph.md  ddd_order.py  error_recovery.graph.md  error_recovery.py  event_migration.py  expense_approval.graph.md  expense_approval.py  human_in_the_loop.graph.md  human_in_the_loop.py  human_in_the_loop.types.md  map_reduce.graph.md  map_reduce.py  map_reduce.types.md  order.graph.md  order.py  react_agent.graph.md  react_agent.py  react_agent.types.md  reflection_loop.graph.md  reflection_loop.py  reflection_loop.types.md  supervisor.graph.md  supervisor.py  supervisor.types.md
scripts/: generate_mermaid.py  release.py  validate_tests.py
src/langgraph_events/: __init__.py  _custom_event.py  _domain.py  _event.py  _event_log.py  _graph.py  _handler.py  _internal.py  _mermaid.py  _reducer.py  _types.py  stream.py
src/langgraph_events/_domain/: __init__.py  _json.py  _mermaid.py  _model.py  _text.py
src/langgraph_events/_namespace/: __init__.py  _command_privacy.py  _json.py  _mermaid.py  _model.py  _smells.py  _text.py
src/langgraph_events/agui/: __init__.py  _adapter.py  _context.py  _events.py  _mappers.py  _protocols.py  _resume.py  _state.py  _tools.py  _transport.py
src/langgraph_events/serde/: __init__.py  _jsonplus.py
src/langgraph_events/serde/migrations/: __init__.py  __main__.py  _core.py  detect.py  testing.py
tests/: conftest.py  test_agui.py  test_agui_resume.py  test_causation.py  test_command_handle.py  test_command_privacy.py  test_docs_code_fences.py  test_domain.py  test_event.py  test_event_graph.py  test_event_log.py  test_graph.py  test_handler.py  test_integration_event_placement.py  test_invariant.py  test_mermaid_sync.py  test_migrations_detect.py  test_namespace.py  test_on_decorator.py  test_patterns_docs_sync.py  test_raises.py  test_reducer.py  test_reducer_aggregate.py  test_reducer_domain.py  test_reducer_migration_scenarios.py  test_reducer_namespace.py  test_return_contract.py  test_serde.py  test_smells.py
