[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-events"
version = "0.1.0"
description = "Opinionated event-driven abstraction for LangGraph. State IS events."
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_events"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
