[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-events"
version = "0.5.2"
description = "Opinionated event-driven abstraction for LangGraph. State IS events."
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "cadance-io"}]
readme = "README.md"
keywords = ["langgraph", "events", "event-driven", "state-machine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "langgraph>=0.2.0",
]

[project.urls]
Homepage = "https://cadance-io.github.io/langgraph-events/"
Repository = "https://github.com/cadance-io/langgraph-events"
Documentation = "https://cadance-io.github.io/langgraph-events/"
Changelog = "https://github.com/cadance-io/langgraph-events/blob/main/CHANGELOG.md"

[project.optional-dependencies]
agui = ["ag-ui-protocol>=0.1.0"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-describe>=2.2",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "pytest-cov>=4.0",
    "langchain-openai>=1.1.10",
    "ag-ui-protocol>=0.1.0",
]
examples = [
    "langchain-openai>=0.2.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_events"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
describe_prefixes = ["describe_", "when_", "with_", "without_", "for_"]
filterwarnings = [
    "ignore::langgraph_events.OrphanedEventWarning",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "TCH",      # flake8-type-checking
    "PL",       # pylint subset
    "RUF",      # ruff-specific
    "S",        # flake8-bandit (security)
]
ignore = [
    "PLR0913",  # too-many-arguments (factory functions legitimately have several)
    "PLR2004",  # magic-value-comparison
    "SIM102",   # collapsible-if
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "SIM117", "PLC0415", "PLR0915", "N802"]
"examples/**" = ["T20", "PLR2004", "S101", "S307", "PLC0415", "E501"]
"scripts/**" = ["S603", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["langgraph_events"]

[tool.ruff.format]
docstring-code-format = false

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_generics = false
warn_return_any = false
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain_core.*", "langchain_openai.*", "ag_ui.*", "starlette.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
allow_redefinition = true

[[tool.mypy.overrides]]
module = "examples.*"
disallow_untyped_defs = false
warn_return_any = false

[tool.coverage.run]
source = ["langgraph_events"]
branch = true

[tool.coverage.report]
fail_under = 92
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]
